--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
     <div class="row">	
   	 <p id="finalCon" ><br></p>
     </div>
+	
+    <div class="row">	
+  	 <button type="button" class="btn btn-primary" onclick="reset()" id="resetBut">Reset</button>
+    </div>		
 
     </div>
 
