--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 	
     <div class="row">	
-  	 <button type="button" class="btn btn-primary" onclick="reset()" id="resetBut">Reset</button>
+  	 <button type="button" class="btn btn-lg btn-primary" onclick="reset()" id="resetBut">Reset</button>
     </div>		
 
     </div>
