--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   	 <p id="finalCon" ><br></p>
     </div>
 	
-    <div class="row">	
-  	 <button type="button" class="btn btn-lg btn-primary" onclick="reset()" id="resetBut">Reset</button>
+    <div id="resetBut" class="row">	
+  	 <button type="button" class="btn btn-primary btn-lg" onclick="reset()">Reset</button>
     </div>		
 
     </div>
